--- a/_config.yml
+++ b/_config.yml
@@ -6,39 +6,38 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Haofei Ma - Academic Homepage"
-description              : "A master student in the National Key Lab of Robotics and Systems. Focusing on robot autonomous operation technology."
-repository               : "HaofeiMa/academic-page"
-google_scholar_stats_use_cdn : false
+title                    : "Ke Liu - Academic Homepage"
+description              : #"A master student in the National Key Lab of Robotics and Systems. Focusing on robot autonomous operation technology."
+google_scholar_stats_use_cdn : true
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+google_site_verification :  get google_site_verification from https://search.google.com/search-console/about
+bing_site_verification   :  get bing_site_verification from https://www.bing.com/webmasters/about
+baidu_site_verification  :  get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
 author:
-  name             : "Haofei Ma"
-  avatar           : "images/android-chrome-512x512.png"
-  bio              : "Harbin Institute of Technology"
-  location         : "Harbin, China"
+  name             : "Ke liu (刘可)"
+  avatar           : "lkprofile.jpeg"
+  bio              : #"Harbin Institute of Technology"
+  location         : "Southeast University, China"
   employer         :
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "mail@mahaofei.com"
+  googlescholar    :  "https://scholar.google.com/citations?user=FF2xh8AAAAAJ"
+  email            : "liuke.ssx@gmail.com"
   researchgate     : # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              : # "https://www.mahaofei.com"
-  blog             : "https://www.mahaofei.com"
+  blog             : #"https://www.mahaofei.com"
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "HaofeiMa" # e.g., "github username"
+  github           : #"HaofeiMa"  e.g., "github username"
   google_plus      :
   keybase          :
   instagram        :
@@ -46,7 +45,7 @@ author:
   lastfm           :
   linkedin         : # e.g., "linkedin username"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0009-0001-5061-6191" # e.g., "https://orcid.org/xxxx"
+  orcid            : "https://orcid.org/0000-0003-0191-4149" # e.g., "https://orcid.org/xxxx"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
