--- a/_config.yml
+++ b/_config.yml
@@ -6,31 +6,31 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Ke Liu - Academic Homepage"
-description              : #"A master student in the National Key Lab of Robotics and Systems. Focusing on robot autonomous operation technology."
-google_scholar_stats_use_cdn : true
+title                    : "Ke Liu's Personal Homepage"
+description              : "A Ph.D. student in Architecture
+google_scholar_stats_use_cdn : false
 
 # google analytics
-google_analytics_id      :  get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  #get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+google_site_verification :  #get google_site_verification from https://search.google.com/search-console/about
+bing_site_verification   :  #get bing_site_verification from https://www.bing.com/webmasters/about
+baidu_site_verification  :  #get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
 author:
   name             : "Ke liu (刘可)"
   avatar           : "lkprofile.jpeg"
-  bio              : #"Harbin Institute of Technology"
-  location         : "Southeast University, China"
-  employer         :
+  bio              : #""
+  location         : "Nanjing, China"
+  employer         : "Southeast University"
   pubmed           : 
   googlescholar    :  "https://scholar.google.com/citations?user=FF2xh8AAAAAJ"
   email            : "liuke.ssx@gmail.com"
   researchgate     : # e.g., "https://www.researchgate.net/profile/yourprofile"
-  uri              : # "https://www.mahaofei.com"
-  blog             : #"https://www.mahaofei.com"
+  uri              : # ""
+  blog             : #""
   bitbucket        :
   codepen          :
   dribbble         :
