--- a/_config.yml
+++ b/_config.yml
@@ -22,33 +22,33 @@ baidu_site_verification  :  #get baidu_site_verification from https://ziyuan.bai
 author:
   name             : "Ke liu (刘可)"
   avatar           : "lkprofile.png"
-  bio              : #""
+  bio              : 
   location         : "Nanjing, China"
   employer         : "Southeast University"
   pubmed           : 
   googlescholar    :  "https://scholar.google.com/citations?user=FF2xh8AAAAAJ"
   email            : "liuke.ssx@gmail.com"
-  researchgate     : # e.g., "https://www.researchgate.net/profile/yourprofile"
-  uri              : # ""
-  blog             : #""
+  researchgate     : 
+  uri              : 
+  blog             : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"HaofeiMa"  e.g., "github username"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      :
   lastfm           :
-  linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0000-0003-0191-4149" # e.g., "https://orcid.org/xxxx"
+  linkedin         :
+  dblp             : 
+  orcid            : "https://orcid.org/0000-0003-0191-4149"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    :
   steam            :
   tumblr           :
   twitter          : 
