--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  #get baidu_site_verification from https://ziyuan.bai
 # Site Author
 author:
   name             : "Ke liu (刘可)"
-  avatar           : "images/lkprofile.png"
+  avatar           : "images/lkprofile111.png"
   bio              : 
   location         : "Nanjing, China"
   employer         : "Southeast University"
