--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@ baidu_site_verification  :  #get baidu_site_verification from https://ziyuan.bai
 
 # Site Author
 author:
-  name             : "Ke liu (刘可)
-  
-  "
+  name             : "Ke liu (刘可)"
   avatar           : "images/lkprofile11.png"
   #bio              : 
   location         : "Nanjing, China"
