--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Nanjing, China"
   employer         : "Southeast University"
   pubmed           : 
-  googlescholar    :  "https://scholar.google.com/citations?user=FF2xh8AAAAAJ"
+  googlescholar    :  "https://scholar.google.com/citations?user=lUeTVD4AAAAJ"
   email            : "liuke.ssx@gmail.com"
   researchgate     : 
   uri              : 
