--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         : "Southeast University"
   pubmed           : 
   googlescholar    :  "https://scholar.google.com/citations?user=lUeTVD4AAAAJ"
-  email            : "liuke.ssx@gmail.com"
+  email            : "uuliuke@gmail.com"
   researchgate     : 
   uri              : 
   blog             : 
