--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   bio              : "Ph.D. candidate"
   location         : "Nanjing, China"
   employer         : "Southeast University"
-  pubmed           : 
-  googlescholar    :  "https://scholar.google.com/citations?user=lUeTVD4AAAAJ"
+  pubmed           : "https://www.webofscience.com/wos/author/record/MDS-9583-2025"
+  googlescholar    : "https://scholar.google.com/citations?user=lUeTVD4AAAAJ"
   email            : "uuliuke@gmail.com"
   researchgate     : 
   uri              : 
