--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
   steam            :
   tumblr           :
   twitter          : 
-  vine             :
+  scopus           :"https://www.scopus.com/authid/detail.uri?authorId=57213166463"
   weibo            :
   xing             :
   youtube          :
